--- a/wercker.yml
+++ b/wercker.yml
@@ -6,6 +6,7 @@ build:
         name: rvm install
         code: |
           sudo apt-get update -y
+          gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
           curl -sSL https://get.rvm.io | bash -s stable
           source $HOME/.rvm/scripts/rvm
           rvm install 2.2.0 --default
