--- a/wercker.yml
+++ b/wercker.yml
@@ -3,6 +3,9 @@ no-response-timeout: 15
 build:
   steps:
     - script:
+        name: docker version
+        code: docker -v
+    - script:
         name: rvm install
         code: |
           sudo apt-get update -y
