--- a/circle.yml
+++ b/circle.yml
@@ -2,15 +2,8 @@ machine:
   services:
     - docker
 
-dependencies:
-  pre:
-    - docker -v
-    - ssh-keygen -t rsa -b 2048 -N "" -C "itamae" -f .ssh/id_rsa
-    - docker build --rm -t osx-ci-agent .
-
 test:
   pre:
-    - docker run --privileged -d -p 42222:22 osx-ci-agent
+    - make
   override:
-    - bundle exec itamae ssh -h 127.0.0.1 -u root -p 42222 --key .ssh/id_rsa recipes/recipes.rb
-    - bundle exec rake spec
+    - make test
