--- a/wercker.yml
+++ b/wercker.yml
@@ -3,32 +3,9 @@ no-response-timeout: 15
 build:
   steps:
     - script:
-        name: docker version
-        code: docker -v
     - script:
-        name: rvm install
-        code: |
-          sudo apt-get update -y
-          gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
-          curl -sSL https://get.rvm.io | bash -s stable
-          source $HOME/.rvm/scripts/rvm
-          rvm install 2.2.0 --default
-          echo "gem: --no-rdoc --no-ri" >> $HOME/.gemrc
-    - rvm-use:
-        version: 2.2.0
-    - bundle-install
-    - script:
-        name: generate ssh key
-        code: ssh-keygen -t rsa -b 2048 -N "" -C "itamae" -f .ssh/id_rsa
-    - script:
-        name: docker build
-        code: docker build --rm -t osx-ci-agent .
-    - script:
-        name: docker run
-        code: docker run --privileged -d -p 42222:22 osx-ci-agent
-    - script:
-        name: itamae provision
-        code: bundle exec itamae ssh -h 127.0.0.1 -u root -p 42222 --key .ssh/id_rsa recipes/recipes.rb
+        name: boot and provision
+        code: make
     - script:
         name: serverspec test
-        code: bundle exec rake spec
+        code: make test
